@@ -18,7 +18,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <vaadin.version>23.1.3</vaadin.version>
+        <vaadin.version>23.1.13</vaadin.version>
         <functionaljava.version>5.0</functionaljava.version>
     </properties>
 
@@ -310,6 +310,7 @@
             <!-- Production mode is activated using -Pproduction -->
             <id>production</id>
             <build>
+                <finalName>SeaQns</finalName>
                 <plugins>
                     <plugin>
                         <groupId>com.vaadin</groupId>
@@ -326,6 +327,94 @@
                         <configuration>
                             <productionMode>true</productionMode>
                         </configuration>
+                    </plugin>
+                   <!-- <plugin>
+                        <groupId>com.vaadin</groupId>
+                        <artifactId>vaadin-maven-plugin</artifactId>
+                        <version>${vaadin.version}</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>prepare-frontend</goal>
+                                    <goal>build-frontend</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>-->
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>build-info</id>
+                                <goals>
+                                    <goal>build-info</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+
+                    <plugin>
+                        <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                        <artifactId>launch4j-maven-plugin</artifactId>
+                        <version>2.1.3</version>
+                        <executions>
+                            <execution>
+                                <id>l4j-clui</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>launch4j</goal>
+                                </goals>
+                                <configuration>
+                                    <headerType>console</headerType>
+                                    <jar>${project.build.directory}/${project.build.finalName}.${project.packaging}</jar>
+                                    <outfile>${project.build.directory}/${project.build.finalName}.exe</outfile>
+                                    <errTitle>SeaQns</errTitle>
+                                    <classPath>
+                                        <mainClass>org.springframework.boot.loader.JarLauncher</mainClass>
+                                        <addDependencies>true</addDependencies>
+                                        <preCp>anything</preCp>
+                                    </classPath>
+                                    <jre>
+                                        <minVersion>17</minVersion>
+                                        <opts>
+                                            <opt>-Djava.endorsed.dirs=./endorsed</opt>
+                                        </opts>
+                                        <path>${java.home}</path>
+                                        <bundledJre64Bit>true</bundledJre64Bit>
+                                        <runtimeBits>64</runtimeBits>
+                                    </jre>
+                                    <versionInfo>
+                                        <fileVersion>1.0.0.0</fileVersion>
+                                        <txtFileVersion>1.0.0.0</txtFileVersion>
+                                        <fileDescription>SeaQns</fileDescription>
+                                        <copyright>SeaQns</copyright>
+                                        <productVersion>1.0.0.0</productVersion>
+                                        <txtProductVersion>product release version</txtProductVersion>
+                                        <productName>SeaQns</productName>
+                                        <internalName>seaqns</internalName>
+                                        <originalFilename>SeaQns.exe</originalFilename>
+                                    </versionInfo>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-assembly-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>assembly</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>single</goal>
+                                </goals>
+                                <configuration>
+                                    <descriptors>
+                                        <descriptor>assembly.xml</descriptor>
+                                    </descriptors>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
 
                 </plugins>
